[FLINK-37249] Remove unnecessary --add-opens/--add-exports for java.base/sun.net.util